--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "ros.distro": "noetic",
     "files.associations": {
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "dense": "cpp"
     }
 }
