--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,10 @@ set(GCC_COVERAGE_COMPILE_FLAGS "-W -fexceptions -O2 -DNDEBUG -Dlinux")
 # find_package(Eigen3 3.3 REQUIRED NO_MODULE)
 find_library(HDU_LIB HDU NAMES libHDU.a -libHDU HINTS ${CMAKE_CURRENT_SOURCE_DIR}/lib REQUIRED)
 find_library(HD_LIB HD NAMES libHD.so.3.4.0 -libHD HINTS ${CMAKE_CURRENT_SOURCE_DIR}/lib REQUIRED)
+
+find_library(HLU_LIB HDU NAMES libHLU.a -libHLU HINTS ${CMAKE_CURRENT_SOURCE_DIR}/lib REQUIRED)
+find_library(HL_LIB HD NAMES libHL.so.3.4.0 -libHL HINTS ${CMAKE_CURRENT_SOURCE_DIR}/lib REQUIRED)
+
 find_library(GLUT_LIB GLUT NAMES libglut.so.3.9.0 -libglut HINTS ${CMAKE_CURRENT_SOURCE_DIR}/lib REQUIRED)
 find_library(GL_LIB GL NAMES libGL.so.1.7.0 -libGL HINTS ${CMAKE_CURRENT_SOURCE_DIR}/lib REQUIRED)
 find_library(GLU_LIB GLU NAMES libGLU.so.1.3.1 -libGL HINTS ${CMAKE_CURRENT_SOURCE_DIR}/lib REQUIRED)
@@ -36,6 +40,8 @@ target_link_libraries(${PROJECT}
     # Eigen3::Eigen
     ${HDU_LIB}
     ${HD_LIB}
+    ${HLU_LIB}
+    ${HL_LIB}
     ${GLUT_LIB}
     ${GL_LIB}
     ${GLU_LIB}
