--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ add_executable(${PROJECT}
     tele_params/tele_params.cpp         tele_params/tele_params.hpp
     ik/drake_kinematic.cpp              ik/drake_kinematic.hpp
     udp/udp_server.cpp                  udp/udp_server.hpp
+    logger/logger.cpp                   logger/logger.hpp
     lockfree/lockfree.hpp
 )
 
