--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,13 +18,11 @@ find_library(HD_LIB HD NAMES libHD.so.3.4.0 -libHD HINTS ${CMAKE_CURRENT_SOURCE_
 find_library(HLU_LIB HDU NAMES libHLU.a -libHLU HINTS ${CMAKE_CURRENT_SOURCE_DIR}/lib REQUIRED)
 find_library(HL_LIB HD NAMES libHL.so.3.4.0 -libHL HINTS ${CMAKE_CURRENT_SOURCE_DIR}/lib REQUIRED)
 
-find_package(nlohmann_json 3.11.3 REQUIRED)
-
 add_executable(${PROJECT}
     main.cpp
     tele_params/tele_params.cpp         tele_params/tele_params.hpp
     ik/drake_kinematic.cpp              ik/drake_kinematic.hpp
-    # ik/cost.hpp
+    ik/cost.hpp
     udp/udp_server.cpp                  udp/udp_server.hpp
     logger/logger.cpp                   logger/logger.hpp
     lockfree/lockfree.hpp
@@ -39,7 +37,6 @@ target_link_libraries(${PROJECT}
     stdc++
     m
     ncurses
-    nlohmann_json::nlohmann_json
     Eigen3::Eigen
     drake::drake
 )
